--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,3 +1,5 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
   package="com.cacianokroth.vonage_video_call">
+
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
 </manifest>
