--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,6 +1,6 @@
 name: vonage_video_call
 description: Vonage 1 to 1 video call plugin
-version: 0.0.1+6
+version: 0.0.2
 homepage: https://github.com/cacianokroth
 
 environment:
